# qpdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mojoproject.toml  pixi.toml  storage-engine-research.md
ai/: DECISIONS.md  MOJO_REFERENCE.md  PLAN.md  RESEARCH.md  SESSION_5_IMPROVEMENTS.md  STATUS.md  TODO.md
ai/design/: architecture.md  leanstore_implementation.md
ai/research/: SOTA_2024_2025.md  general_storage_engine_sota.md
benchmarks/: bench_basic_ops.mojo
src/: __init__.mojo  backoff.mojo  bwtree.mojo  bwtree_integrated.mojo  consolidate.mojo  delta.mojo  epoch.mojo  error.rs  lib.rs  node.mojo  page_table.mojo  search.mojo
src/buffer/: mod.rs  page.rs  swip.rs
tests/: test_atomic.mojo  test_backoff.mojo  test_bwtree.mojo  test_epoch.mojo  test_integrated.mojo
