[package]
name = "qpdb"
version = "0.0.0"
edition = "2024"
authors = ["Nick <nijaru7@example.com>"]
description = "High-performance embedded storage engine"
repository = "https://github.com/nijaru/qpdb"
license = "Elastic-2.0"
keywords = ["database", "storage-engine", "embedded", "btree", "kv"]
categories = ["database-implementations"]

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
crossbeam-epoch = "0.9.18"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt", "sync"] }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.9.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
